[workspace]
members = ["mlx5", "mlx5_sys", "ibverbs_sys", "copyrpc", "fastmap", "scalerpc", "inproc", "ipc", "mempc", "rpc_bench", "benchkv", "ucx_sys", "pmem", "aggfs", "sola"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
libc = "0.2"
anyhow = "1"
bindgen = "0.72"
criterion = { version = "0.5", features = ["html_reports"] }
slab = "0.4"
mpi = "0.8"
clap = { version = "4", features = ["derive"] }
parquet = "54"
arrow = "54"
core_affinity = "0.8"
bitflags = "2"
rapidhash = "1"
nix = { version = "0.30", features = ["fs", "mman"] }
fastant = "0.1"

# ベンチマーク用最適化設定
[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

# リリース用最適化設定
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
